--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,7 @@ name: Schedule
 
 on:
     schedule:
-        - cron: '10 * * * *'
+        - cron: '*/5 * * * *'
 
 jobs:
     build:
@@ -10,4 +10,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: sh
-              run: sh server-down-notification.sh
+              run: sh server_check.sh
