--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,6 +14,7 @@ jobs:
             - uses: actions/checkout@v2
             - name: sh
               run: sh server_check.sh
+              timeout-minutes: 10
               env:
                   SLACK_WEBHOOK_URL: ${{secrets.SLACK_WEBHOOK_URL}}
 
